# JoyShockMapper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  JoyShockMapper.sln  LICENSE.md  LICENSE.txt  README.md  README_CN.md  README_中文.md  appveyor.yml
JoyShockMapper/: .clang-format  CMakeLists.txt  JoyShockMapper.filters  JoyShockMapper.vcxproj  Win32 Dialog.rc
JoyShockMapper/include/: AutoLoad.h  CmdRegistry.h  ColorCodes.h  DigitalButton.h  Gamepad.h  GamepadMotion.h  GamepadMotion.hpp  HidHideApi.h  InputHelpers.h  JSMAssignment.hpp  JSMCommand.h  JSMVariable.h  JSMVariable.hpp  JSMVersion.h.in  JoyShockLibrary.h  JoyShockMapper.h  JslWrapper.h  Mapping.h  MotionIf.h  PlatformDefinitions.h  SettingsManager.h  Stick.h  TrayIcon.h  TriggerEffectGenerator.h  Whitelister.h  inputHelpers.cpp  inputHelpers.h  resource.h  wintoastlib.h
JoyShockMapper/include/linux/: StatusNotifierItem.h
JoyShockMapper/include/win32/: Gamepad.h  WindowsTrayIcon.h  resource.h
JoyShockMapper/libs/: JoyShockLibrary.lib
JoyShockMapper/mod/: TriggerEffectGenerator.ixx
JoyShockMapper/src/: AutoLoad.cpp  ButtonHelp.cpp  CmdRegistry.cpp  DigitalButton.cpp  GamepadMotion.cpp  JoyShockLibrary.cpp  JslWrapper.cpp  Mapping.cpp  MotionImpl.cpp  SDL2Wrapper.cpp  SDL2Wrapper.cpp.orig  SDL2Wrapper_LOCAL_612.cpp.bak  SDL2Wrapper_REMOTE_612.cpp.bak  SDLWrapper.cpp  SettingsManager.cpp  Stick.cpp  TrayIcon.cpp  TriggerEffectGenerator.cpp  Whitelister.cpp  inputHelpers.cpp  inputHelpersWin.cpp  main.cpp  operators.cpp  quatMaths.cpp  wintoastlib.cpp
JoyShockMapper/src/linux/: Gamepad.cpp  Init.cpp  InputHelpers.cpp  PlatformDefinitions.cpp  StatusNotifierItem.cpp  Whitelister.cpp
JoyShockMapper/src/win32/: Gamepad.cpp  HidGuardianWhitelister.cpp  HidHideApi.cpp  HidHideWhitelister.cpp  InputHelpers.cpp  InputHelpers.cpp.orig  PlatformDefinitions.cpp  Whitelister.cpp  WindowsTrayIcon.cpp
cmake/: CPM.cmake  GetGitRevisionDescription.cmake  LinuxConfig.cmake  WindowsConfig.cmake
script/: create_linux_obs_sources.sh  create_windows_release_archives.bat  generate_win32_vs_solution.bat  generate_win32_vs_solution_JSL.bat  generate_win32_vs_solution_SDL.bat  generate_win64_vs_solution.bat  generate_win64_vs_solution_JSL.bat  generate_win64_vs_solution_SDL.bat
